--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +7,7 @@
 }
 
 body {
+  font-family: "Poppins", sans-serif;
   margin: 4rem;
   width: 90%;
   background-image: linear-gradient(to right, #f0e9d7ba, #d9e4efb9),
