--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  margin: 4rem;
-  width: 90%;
   background-image: linear-gradient(to right, #f0e9d7ba, #d9e4efb9),
     url(./assets/img/myBackground.jpg);
   background-repeat: no-repeat;
@@ -19,12 +17,17 @@ body {
   right: 0; */
 }
 
+.myBody {
+  margin: 0 4rem;
+  width: 90%;
+}
+
 header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 1rem;
-  box-shadow: 1px 1px rgb(2, 57, 74);
+  padding: 2rem;
+  box-shadow: 0px 0px 10px rgb(2, 57, 74);
 }
 
 h2 {
