--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@ header {
   box-shadow: 0px 0px 10px rgb(2, 57, 74);
 }
 
+nav {
+  display: flex;
+  width: 30rem;
+  justify-content: space-between;
+  padding-right: 4rem;
+}
+
 h2 {
   margin-top: 3rem;
 }
