--- a/reproducePage/turlututu/style.css
+++ b/reproducePage/turlututu/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500&display=swap");
 
 * {
   margin: 0;
@@ -13,14 +13,26 @@ ul a {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container {
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
 /* _________________________NAVBAR___________________________ */
-
-header {
-  padding: 1rem;
+header,
+footer {
   background-color: rgb(40, 40, 40);
+  width: 100%;
+}
+
+header .container {
+  padding: 1rem;
   display: flex;
   /* align-content: center; */
   align-items: center;
@@ -30,13 +42,19 @@ header {
 
 .navBar {
   align-items: end;
+  width: 100%;
+  padding-left: 2rem;
 }
-.navBar ul {
+.navBar ul,
+.navFooter ul {
   display: flex;
   gap: 3rem;
 }
-.navBar a {
+a {
   color: #fff;
+}
+.login {
+  margin-left: auto;
 }
 
 .login i {
@@ -46,8 +64,13 @@ header {
 }
 
 /* _________________________Section 1___________________________ */
+.full-blue {
+  box-shadow: 0 0 0 100vmax rgb(30, 147, 204);
+  clip-path: inset(0 -100vmax);
+}
 .blueSection {
   background-color: rgb(30, 147, 204);
+  padding: 1rem 0;
 }
 /* _________________________Top___________________________ */
 .top {
@@ -57,14 +80,19 @@ header {
   /* justify-content: space-around; */
   margin: 0 7rem;
 }
+
+.myAvatar img {
+  width: 18rem;
+  padding-bottom: 2rem;
+}
+
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 40rem;
 }
 .content p {
-  font-size: 2rem;
+  font-size: 1.6rem;
   color: #fff;
   margin: 2rem 0;
 }
@@ -79,6 +107,10 @@ button {
 }
 
 /* _________________________Division___________________________ */
+.full-division {
+  box-shadow: 0 0 0 100vmax #fff;
+  clip-path: inset(0 -100vmax);
+}
 .division {
   background-color: #fff;
   padding: 1rem;
@@ -86,8 +118,13 @@ button {
   text-align: center;
   color: rgb(40, 40, 40);
 }
+.color {
+  color: gray;
+  font-weight: lighter;
+}
 /* _________________________Information___________________________ */
 .information {
+  margin: 2rem;
   padding: 3rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -103,25 +140,26 @@ button {
   font-weight: 500;
 }
 /* _________________________Sponsors___________________________ */
-
+.full-sponsors {
+  box-shadow: 0 0 0 100vmax rgb(238, 238, 238);
+  clip-path: inset(0 -100vmax);
+}
 .sponsors {
   background-color: rgb(238, 238, 238);
+  text-align: center;
 }
-
-@media (max-width: 500px) {
-  .sponsors img {
-    display: none;
-  }
+.sponsors img {
+  width: auto;
 }
 
 /* _________________________Actions___________________________ */
 
 .actions {
-  height: 12rem;
-  padding-right: 4rem;
+  margin: 2rem;
   border-radius: 0.4rem;
   display: flex;
-  justify-content: end;
+  justify-content: center;
+  gap: 1rem;
   align-items: center;
 }
 
@@ -138,9 +176,9 @@ button {
 
 /* _________________________FOOTER___________________________ */
 
-footer {
+.navFooter {
   padding: 2rem;
-  background-color: rgb(40, 40, 40);
+
   display: flex;
   /* align-content: center; */
   align-items: center;
@@ -152,4 +190,90 @@ footer {
 footer li,
 .copyright {
   width: 3rem;
+}
+
+/* ____________________Big devices_________________ */
+
+@media screen and (min-width: 1024px) {
+  /* header,
+  .top,
+  .division,
+  .information,
+  .actions,
+  footer {
+    padding: 1rem 15rem;
+  } */
+  .sponsors img {
+    width: 768px;
+  }
+}
+
+/* ____________________Medium devices_________________ */
+
+@media screen and (max-width: 768px) {
+  .loginText {
+    display: none;
+  }
+  header,
+  .top,
+  .division,
+  .information,
+  .actions,
+  footer {
+    padding: 1rem 2rem;
+  }
+
+  .navBar ul {
+    gap: 1.3rem;
+  }
+
+  .sponsors {
+    height: 10rem;
+  }
+}
+
+/* ____________________Small devices_________________ */
+
+@media screen and (max-width: 500px) {
+  .navBar ul {
+    position: fixed;
+    inset: 0 0 0 30%;
+    background: steelblue;
+    flex-direction: column;
+  }
+  .login {
+    margin-left: 0;
+  }
+  .top {
+    margin: 1rem;
+    gap: 0;
+  }
+  .myAvatar img {
+    width: 10rem;
+  }
+
+  .content p {
+    font-size: 1.3rem;
+    text-align: center;
+  }
+
+  .content button {
+    font-size: 1rem;
+  }
+  .information {
+    margin: 2rem;
+    padding: 0rem;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .sponsors img {
+    width: 25rem;
+  }
+  .actions {
+    flex-wrap: wrap;
+    padding: 1rem;
+  }
+  .copyright {
+    justify-content: center;
+  }
 }
