--- a/reproducePage/turlututu/style.css
+++ b/reproducePage/turlututu/style.css
@@ -20,13 +20,13 @@ body {
 }
 
 .container {
-  max-width: 1024px;
+  max-width: 1490px;
   margin: 0 auto;
 }
 
 /* _________________________NAVBAR___________________________ */
 .full-black {
-  box-shadow: 0 0 0 100vmax rgb(40, 40, 40);
+  box-shadow: 0 0 0 100vmax #282828;
   clip-path: inset(0 -100vmax);
 }
 
@@ -44,7 +44,10 @@ header {
   justify-content: space-between;
   color: #fff;
 }
-
+.sr-only,
+.mobile-nav-toggle {
+  display: none;
+}
 .navBar {
   align-items: end;
   width: 100%;
@@ -55,6 +58,13 @@ header {
   display: flex;
   gap: 3rem;
 }
+.navBar li:hover,
+.navBar a:hover {
+  text-decoration: underline;
+  text-underline-offset: 0.4rem;
+  font-weight: 600;
+}
+
 a {
   color: #fff;
 }
@@ -153,9 +163,6 @@ button {
   background-color: rgb(238, 238, 238);
   text-align: center;
 }
-.sponsors img {
-  width: auto;
-}
 
 /* _________________________Actions___________________________ */
 
@@ -200,14 +207,9 @@ footer li,
 /* ____________________Big devices_________________ */
 
 @media screen and (min-width: 1024px) {
-  /* header,
-  .top,
-  .division,
-  .information,
-  .actions,
-  footer {
-    padding: 1rem 15rem;
-  } */
+  header {
+    padding: 1rem 2rem;
+  }
   .sponsors img {
     width: 768px;
   }
@@ -225,33 +227,78 @@ footer li,
   .information,
   .actions,
   footer {
-    padding: 1rem 2rem;
+    padding: 1rem;
   }
 
   .navBar ul {
     gap: 1.3rem;
   }
+  .top {
+    margin: 0;
+    gap: 0;
+  }
+  .myAvatar img {
+    width: 16rem;
+  }
 
   .sponsors {
     height: 10rem;
+  }
+
+  .sponsors img {
+    width: 768px;
   }
 }
 
 /* ____________________Small devices_________________ */
 
 @media screen and (max-width: 500px) {
+  .full-black {
+    box-shadow: 0;
+    clip-path: none;
+  }
+  .mobile-nav-toggle {
+    display: inline-block;
+    position: absolute;
+    z-index: 999;
+    background: url(assets/img/menu.png);
+    border: none;
+    background-size: 2.5rem;
+    background-repeat: no-repeat;
+    width: 3rem;
+    inset: 3;
+    top: 2rem;
+    right: 2rem;
+  }
   .navBar ul {
     position: fixed;
     inset: 0 0 0 30%;
-    background: steelblue;
     flex-direction: column;
+    z-index: 99;
+    padding: min(30vh, 10rem) 2em;
+    background: hsla(0, 3%, 6%, 0.9);
   }
+
+  @supports (backdrop-filter: blur(1rem)) {
+    .navBar ul {
+      background: hsla(0, 3%, 6%, 0.4);
+      backdrop-filter: blur(1rem);
+    }
+  }
+
   .login {
     margin-left: 0;
   }
+  .loginText {
+    display: inline-block;
+  }
   .top {
+    padding: 0;
     margin: 1rem;
     gap: 0;
+  }
+  .myAvatar {
+    margin: 0 -20px;
   }
   .myAvatar img {
     width: 10rem;
@@ -277,6 +324,12 @@ footer li,
   .actions {
     flex-wrap: wrap;
     padding: 1rem;
+  }
+  .navFooter {
+    padding: 0;
+  }
+  .navFooter ul {
+    gap: 0.5rem;
   }
   .copyright {
     justify-content: center;
