--- a/v-card/style.css
+++ b/v-card/style.css
@@ -1,89 +1,62 @@
 /* ==== GOOGLE FONTS ====*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500&family=Roboto:wght@100;400;700;900&display=swap");
 /* ==== VARIABLES CSS ====*/
 :root {
-  --header-height: 3rem;
   /* ==== CoLors ====*/
   /* Change favorite coLor */
   --hue-color: 740;
 
   /* HSL coLor mode */
   --first-color: hsl(var(--hue-color), 69%, 61%);
-  --first-color-second: hsl(var(--hue-color), 70%, 61%);
-  --first-color-alt: hsl(var(--hue-color), 57%, 53%);
-  --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
-  --title-color: hsl(var(--hue-color), 8%, 15%);
-  --text-color: hsl(var(--hue-color), 8%, 45%);
-  --text-color-light: hsl(var(--hue-color), 8%, 65%);
-  --input-color: hsl(var(--hue-color), 70%, 96%);
+  --text-color: hsl(var(--hue-color), 8%, 10%);
+  --text-color-light: hsl(var(--hue-color), 100%, 100%);
+  --text-color-alt: hsl(var(--hue-color), 69%, 61%);
   --description-color: hsl(var(--hue-color), 60%, 99%);
   --container-color: #4b4a4a;
-  --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
-  --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
 
   /* ==== Font and typography ====*/
-  --body-font: "Poppins", sans-serif;
+  --body-font: "Montserrat", sans-serif;
 
   /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
-  --big-font-size: 2rem;
-  --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1.125rem;
+  --big-font-size: 1.5rem;
   --normal-font-size: 0.938rem;
-  --small-font-size: 0.813rem;
   --smaller-font-size: 0.75rem;
 
   /* ==== Font weight ====*/
-  --font-medium: 500;
-  --font-semi-bold: 600;
+  --font-thin: 100;
+  --font-medium: 400;
+  --font-semi-bold: 700;
+  --font-bold: 900;
 
   /* ==== Margens Bottom ====*/
   /* .25rem = 4px, .5rem = 8px, .75rem = 12px ... */
-  --mb-0-25: 0.25rem;
+
   --mb-0-5: 0.5rem;
-  --mb-0-75: 0.75rem;
   --mb-1: 1rem;
-  --mb-1-5: 1.5rem;
-  --mb-2: 2rem;
-  --mb-2-5: 2.5rem;
-  --mb-3: 3rem;
-
-  /* ==== z index ====*/
-  --z-tooltip: 10;
-  --z-fixed: 100;
-  --z-modal: 1000;
 }
 
-/* ==== Font size for Large devices ====*/
-@media screen and (min-width: 968px) {
-  :root {
-    --big-font-size: 3rem;
-    --h1-font-size: 2.25rem;
-    --h2-font-size: 1.5rem;
-    --h3-font-size: 1.25rem;
-    --normal-font-size: 1rem;
-    --small-font-size: 0.875rem;
-    --smaller-font-size: 0.813rem;
-  }
-}
 /* _______________________RESET________________________ */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+a {
+  text-decoration: none;
+}
+
 .container {
-  background-color: var(--container-color);
+  background-color: black;
   height: 100vh;
+  font-family: var(--body-font);
 }
 
 .content {
+  position: absolute;
   display: flex;
   flex-direction: row;
   width: 70rem;
   height: 35rem;
-  border: red solid;
   margin-left: auto;
   margin-right: auto;
 }
@@ -96,16 +69,100 @@
 }
 
 .social-info {
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 2rem;
   background-color: var(--first-color);
-  width: 33rem;
+  width: 39rem;
   color: var(--text-color-light);
 }
 
-.description-info {
+.logo {
+  font-size: var(--big-font-size);
+}
+
+.contact,
+.home-social {
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.my-social {
+  align-items: flex-start;
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+}
+
+.social-icons a {
+  font-weight: var(--font-semi-bold);
+  color: var(--text-color-light);
+  padding-right: 1rem;
+}
+
+.description {
   background-color: var(--description-color);
 }
 
+.description-container {
+  margin: 0 2rem 0 20rem;
+}
+
+.title {
+  align-items: flex-start;
+  font-size: var(--big-font-size);
+  font-weight: var(--font-semi-bold);
+}
+
+.title-name {
+  font-weight: var(--font-bold);
+}
+
+.title-profession {
+  color: var(--text-color-alt);
+  margin-top: var(--mb-0-5);
+  font-weight: var(--font-medium);
+}
+
+.my-description {
+  margin-top: var(--mb-1);
+  font-weight: var(--font-thin);
+  font-size: var(--small-font-size);
+  line-height: 1.4rem;
+}
+
+.info-buttons {
+  margin: var(--mb-1) 0;
+}
+
+button {
+  border-radius: 1rem;
+  padding: 0.55rem 1.2rem;
+  font-weight: var(--font-medium);
+  font-size: var(--smaller-font-size);
+}
+
+.portfolio {
+  border: 2.2px solid var(--first-color);
+  background-color: var(--first-color);
+  margin-right: var(--mb-1);
+}
+
+.portfolio a {
+  color: var(--text-color-light);
+}
+
+.resume {
+  border: 2.2px solid black;
+  background-color: #fff;
+}
+
+.resume a {
+  color: var(--text-color);
+}
+
 img {
-  position: fixed;
+  position: absolute;
   width: 20rem;
+  top: 3.2rem;
+  left: 16rem;
 }
