--- a/v-card/style.css
+++ b/v-card/style.css
@@ -55,7 +55,8 @@ a {
   position: absolute;
   display: flex;
   flex-direction: row;
-  width: 70rem;
+  width: 80%;
+  max-width: 60rem;
   height: 35rem;
   margin-left: auto;
   margin-right: auto;
@@ -71,9 +72,9 @@ a {
 .social-info {
   justify-content: space-between;
   align-items: flex-start;
+  width: 30%;
   padding: 2rem;
   background-color: var(--first-color);
-  width: 39rem;
   color: var(--text-color-light);
 }
 
@@ -85,6 +86,7 @@ a {
 .home-social {
   align-items: flex-start;
   gap: 1rem;
+  padding-right: 2rem;
 }
 
 .my-social {
@@ -164,5 +166,5 @@ img {
   position: absolute;
   width: 20rem;
   top: 2.5rem;
-  left: 16rem;
+  left: 26%;
 }
