--- a/responsive-frontEnd/style.css
+++ b/responsive-frontEnd/style.css
@@ -3,19 +3,20 @@
   margin: 0;
   padding: 0;
 }
-.content {
-  padding: 1rem;
-  border-radius: 1rem;
-  height: fit-content;
-}
+
 .container {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   padding: 1rem;
   justify-content: center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
+}
+.content {
+  padding: 1rem;
+  border-radius: 1rem;
+  height: fit-content;
 }
 .small {
   background-color: rgb(99, 97, 97);
