--- a/pixel-perfect/assets/style.css
+++ b/pixel-perfect/assets/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
+
 @import url("https://fonts.googleapis.com/css2?family=Caladea:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Source+Serif+Pro:wght@500&display=swap");
 
 * {
   box-sizing: border-box;
@@ -12,7 +13,7 @@
 }
 
 .container {
-  padding: 3rem;
+  padding: 3.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,38 +22,41 @@
 }
 
 .content {
-  width: 40rem;
-  padding: 2rem;
+  padding: 3rem;
   font-family: "Roboto", sans-serif;
-  color: rgb(88, 89, 90);
+  color: rgb(40, 41, 52);
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.06),
     0 -2px 20px 2px rgb(255, 255, 255);
 }
 
 .page {
+  font-family: "Lato", sans-serif;
   text-transform: uppercase;
-  font-weight: 900;
+  font-weight: 600;
+  font-size: 1.3rem;
 }
 
 .container h1 {
-  color: rgb(54, 56, 58);
-  font-family: "Playfair Display", serif;
+  padding-top: 2rem;
+  font-family: "Source Serif Pro", serif;
   font-size: 4rem;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .page-info {
-  font-size: 1.8rem;
+  padding: 2.5rem 0;
+  font-size: 1.5rem;
   line-height: 2.6rem;
 }
 
 .btn {
   width: 100%;
+  font-family: "Lato", sans-serif;
   text-transform: uppercase;
   font-size: 1.5rem;
   background-color: rgb(46, 50, 56);
-  color: rgb(255, 255, 255);
-  padding: 1rem;
+  color: rgb(216, 216, 216);
+  padding: 2rem;
   border: none;
 }
 
@@ -157,4 +161,79 @@
   padding: 1rem;
   color: #fff;
   background-color: rgb(239, 129, 82);
+}
+
+@media (width > 400px) {
+  .content {
+    max-width: 40rem;
+  }
+}
+
+/* _______________TEAM _______________*/
+
+.team {
+  background-color: #f6f2f2;
+  padding: 20px;
+}
+
+.container-team {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.role {
+  padding: 0.3rem;
+  font-family: "Lato", sans-serif;
+  text-transform: uppercase;
+  font-size: 0.6rem;
+  width: 100%;
+  text-align: center;
+  border-bottom: 1.8px solid #cfcece9c;
+}
+
+.card-team {
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  background-color: #fff;
+  padding-bottom: 2rem;
+}
+
+.card-team img {
+  object-fit: cover;
+  width: 7rem;
+  height: 7rem;
+  border-radius: 50%;
+}
+
+.description {
+  text-align: center;
+}
+
+.name {
+  font-weight: bold;
+}
+
+.role-description {
+  color: #3e3d3d;
+  text-align: center;
+  font-size: 0.7rem;
+  padding: 0.4rem 1.3rem;
+}
+
+.social-media {
+  display: flex;
+  gap: 1rem;
+  padding: 0.3rem 1rem;
+  border-radius: 3rem;
+  border: 1px solid #cfcece9c;
+}
+
+.social-media i {
+  font-size: 1rem;
+  color: #292828;
 }
