--- a/pixel-perfect/assets/style.css
+++ b/pixel-perfect/assets/style.css
@@ -19,12 +19,14 @@
   justify-content: center;
   flex-direction: column;
   gap: 2rem;
+  background-color: #f6f2f2;
 }
 
 .content {
   padding: 3rem;
   font-family: "Roboto", sans-serif;
   color: rgb(40, 41, 52);
+  background-color: #fff;
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.06),
     0 -2px 20px 2px rgb(255, 255, 255);
 }
@@ -63,6 +65,7 @@
 /* ======= Complex layout =======*/
 
 .complex-pixel-plan {
+  background-color: #fff;
   padding: 0;
   border-radius: 2rem;
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.06),
@@ -72,7 +75,7 @@
   align-items: center;
 
   color: #3e3d3d;
-  width: 30rem;
+
   font-family: "Roboto", sans-serif;
 }
 
@@ -89,7 +92,7 @@
 .description-title-complex {
   font-size: 0.9rem;
   font-weight: 500;
-  padding: 1rem 6rem;
+  padding: 1rem 2rem;
   text-align: center;
   border-bottom: 1.8px solid #cfcece9c;
 }
@@ -163,21 +166,19 @@
   background-color: rgb(239, 129, 82);
 }
 
-@media (width > 400px) {
-  .content {
-    max-width: 40rem;
-  }
-}
-
 /* _______________TEAM _______________*/
 
 .team {
   background-color: #f6f2f2;
   padding: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .container-team {
+  width: 20rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 20px;
@@ -236,4 +237,21 @@
 .social-media i {
   font-size: 1rem;
   color: #292828;
+}
+
+@media (width > 400px) {
+  .content {
+    max-width: 40rem;
+  }
+  .complex-pixel-plan {
+    width: 30rem;
+  }
+  .description-title-complex {
+    padding: 1rem 6rem;
+  }
+  .container-team {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
 }
