--- a/style.css
+++ b/style.css
@@ -23,11 +23,11 @@ ul {
   padding: 1rem;
 }
 
-.projects {
+/* .projects {
   padding: 1rem;
   display: flex;
   flex-direction: column;
-}
+} */
 
 h1 {
   color: rgb(5, 64, 101);
@@ -56,10 +56,26 @@ iframe {
   width: 100vw;
 }
 
-@media (width <= 300px) {
+.close-menu {
+  background-image: url(assets/icon-close.svg);
+  background-repeat: no-repeat;
+  background-position-x: left;
+}
+
+@media (width <= 400px) {
   .container {
-    background-color: rgb(239, 186, 186);
-    font-size: 3rem;
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .content-menu {
+    width: 100%;
+    height: 20rem;
+    /*  background-color: rgb(228, 228, 228); */
+    padding: 1rem;
+  }
+
+  .projects {
+    flex-direction: row;
   }
 }
