--- a/style.css
+++ b/style.css
@@ -14,35 +14,56 @@ ul {
 
 .container {
   display: flex;
+  flex-direction: column;
 }
 
 .content-menu {
-  width: 17rem;
-  height: 100vh;
   background-color: rgb(228, 228, 228);
-  padding: 1rem;
+  padding: 1rem 1.4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
 }
 
-/* .projects {
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-} */
+.menu,
+.close-menu {
+  display: inline-block;
+  width: 100%;
+  text-align: end;
+  padding-bottom: 1rem;
+}
 
-h1 {
+i {
+  font-size: 2rem;
+}
+
+.hideNavbar {
+  display: none;
+}
+
+.showNavbar {
+  display: inline-block;
+}
+
+.becode h1 {
   color: rgb(5, 64, 101);
   padding-bottom: var(--padding-botton);
 }
+.becode p {
+  padding-bottom: 1rem;
+  padding-right: 3rem;
+}
 
-a {
+.navbar a {
   min-height: var(--header-height);
   color: black;
   text-decoration: none;
   font-size: 1.3rem;
 }
 
-a:hover {
-  color: rgb(5, 64, 101);
+.navbar a:hover {
+  color: rgb(6, 70, 112);
   text-decoration: underline;
   text-underline-offset: 0.4rem;
 }
@@ -54,23 +75,21 @@ a:hover {
 iframe {
   border: none;
   width: 100vw;
+  height: 100vh;
 }
 
-.close-menu {
-  background-image: url(assets/icon-close.svg);
-  background-repeat: no-repeat;
-  background-position-x: left;
-}
-
-@media (width <= 400px) {
+@media (width > 1024px) {
   .container {
-    display: flex;
-    flex-direction: column;
+    flex-direction: row;
+  }
+
+  iframe {
+    height: auto;
   }
 
   .content-menu {
-    width: 100%;
-    height: 20rem;
+    width: 17rem;
+    height: 100vh;
     /*  background-color: rgb(228, 228, 228); */
     padding: 1rem;
   }
